--- a/style.css
+++ b/style.css
@@ -1,47 +1,53 @@
-nav {
-	display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: white;
-  padding: 5px;
-	overflow: hidden;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-		}
-
-.logo img {
-    height: 80px;
-    }
- 
-nav a {
-  list-style: none;
-  color: black;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 1px;
-	padding: 14px 16px;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  background-color: #3d1f10;
+  top: 0;
 }
 
-h1, h2 {
-  color: #502816;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: white;
+  color: #3d1f10;
+}
+
+h1 {
+  color: #3d1f10;
+  text-align: center;
+  }
+
+h2 {
+  color: #3d1f10;
+  text-align: center;
+  font-style: italic;
   }
 
 .footer {
-   background-color: #502816;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #3d1f10;
    color: white;
    text-align: center;
-   padding: 10px;
+   padding: 1px 0;
 }
 
-table {
-  border-spacing: 30px;
-}
-
-table, th, td {
-  border: 1px solid black;
-}
-
-  nav a:hover {
-			background-color: #502816;
-			color: white;
-		}
+body {
+  margin: 0;
+  }
+ 
