--- a/style.css
+++ b/style.css
@@ -51,3 +51,22 @@ body {
   margin: 0;
   }
  
+table {
+  border-spacing: 30px;
+  width: 1020px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ table, td {
+  border: 1px solid black;
+}
+
+table img {
+  width: 300px;
+}
+
+td {
+  width: 300px;
+  padding: 0px;
+}
